..F....... [ZBX-7097] changed dashboard drag'n'drop widget placeholder color in the dark orange and dark blue themes (Pavels)
A.F....... [ZBX-1357] updated Dutch, Finnish, Indonesian, Italian, Lithuanian, Persian, Portuguese (Portugal), Russian and Slovak translations; thanks to Zabbix translators (Richlv)

Bug fixes:
A.F....... [ZBX-6995] improved the performance of graph and graph prototype permission checks (Pavels)
...G...... [ZBX-6591] fixed resolution of IPv4 and IPv6 addresses if DNS hostname is specified as server parameter in configuration file; thanks to Trever L. Adams for patch (igors)
....I..... [ZBX-5374] removed ONLY directive from PostgreSQL upgrade statements (Sasha)
..F....... [ZBX-7097] fixed dashboard drag'n'drop widget placeholder not being displayed in the classic theme (Pavels)
....I..... [ZBX-7130] fixed makefiles to build zabbix_proxy only (Sasha)
..F....... [ZBX-7055] fixed displaying OK trigger status in maps (Eduard)
..F....... [ZBX-7081] fixed node drop down being displayed incorrectly in several pop ups (Pavels)
A......... [ZBX-7086] fixed application mass add from different hosts or templates validation (Eduard)
........S. [ZBX-7133] fixed processing of zabbix[host,*,available] item; fixed proxy's hosts availability data on server (Sasha)
..F....... [ZBX-7099] fixed IT services tree icons alignment (Eduard)
A.F.I..... [ZBX-7121] increased size of interface.ip field (Sasha)
A...I..... [ZBX-6975] fixed default values for graphs.yaxismax and graphs_items.yaxisside fields (Sasha)
A......... [ZBX-7131] fixed host interface IP validation (Eduard)
..F....... [ZBX-7112] improved file import validation for graph items (Eduard)
........S. [ZBX-6294] fixed nodata() trigger firing immediately after no data maintenance (asaveljevs, Sasha)
..F....... [ZBX-7134] fixed host inventory interface table when no agent interfaces are set (Ivo)
..F....... [ZBX-7126] fixed host inventories details tab displaying (Eduard)