@@ -6,6 +6,7 @@ New features:
 A.F....... [ZBX-1357] updated Dutch, Finnish, Indonesian, Italian, Lithuanian, Persian, Portuguese (Portugal), Russian and Slovak translations; thanks to Zabbix translators (Richlv)
 
 Bug fixes:
+A.F....... [ZBX-6760] improved performance of getting global scripts (Sasha)
 A.F....... [ZBX-6995] improved the performance of graph and graph prototype permission checks (Pavels)
 ...G...... [ZBX-6591] fixed resolution of IPv4 and IPv6 addresses if DNS hostname is specified as server parameter in configuration file; thanks to Trever L. Adams for patch (igors)
 ....I..... [ZBX-5374] removed ONLY directive from PostgreSQL upgrade statements (Sasha)
